@@ -3,6 +3,7 @@ Revision history for Gtk3::Notify.pm
 
 * Add more tests
 * Add repository details (links, ...) for CPAN
+* Bailout early if Notify typelib isn't available
 * Skip tests that need a DISPLAY when there's not (CPAN RT#127946)
 
 0.02
